Apply defined formatters